[package]
name = "rhino-system"
version = "0.1.0"
edition = "2021"
description = "System management tool for Rolling Rhino Remix"
repository = "https://github.com/rollingrhinoremix/rhino-system"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
